# coug_visual_dvl

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: docker_build.yml  docker_ci.yml  ros2_build_and_test.yml  ros2_ci.yml
coug_visual_dvl/: package.xml  setup.cfg  setup.py
coug_visual_dvl/config/: coug_visual_dvl_params.yaml
coug_visual_dvl/coug_visual_dvl/: visual_dvl.py  visual_dvl_node.py
coug_visual_dvl/launch/: coug_visual_dvl.launch.py
scripts/: calibrate_cameras.py  good_stereo_pairs.json  process_hawaii_data.py  stereo_calibration_params.json  stereo_pairs.json  verified_stereo_pairs.json
