<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coug_visual_dvl</name>
  <version>0.0.0</version>
  <description>Visual odometry for the CougUV</description>
  <maintainer email="snelsondurrant@gmail.com">snelsondurrant</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
